3. Creating the Structural Outer Container

--- a/index.html
+++ b/index.html
@@ -17,7 +17,23 @@
 <body>
     <center class="wrapper">
         <div class="webkit">
-            [content goes here]
+            <!--[if (gte mso 9)|(IE)]>
+            <table width="600" align="center">
+            <tr>
+            <td>
+            <![endif]-->
+            <table class="outer" align="center">
+                <tr>
+                    <td>
+                        [content goes here]
+                    </td>
+                </tr>
+            </table>
+            <!--[if (gte mso 9)|(IE)]>
+            </td>
+            </tr>
+            </table>
+            <![endif]-->
         </div>
     </center>
 </body>
