--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <![endif]-->
             <table class="outer" align="center">
                 <tr>
-                    <td>
-                        [content goes here]
+                    <td class="full-width-image">
+                        <img src="images/header.jpg" width="600" alt="" />
                     </td>
                 </tr>
             </table>
