6. Adding a Two-column Layout

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </td>
                 </tr>
                 <tr>
-                <td class="one-column">
+                    <td class="one-column">
                         <table width="100%">
                             <tr>
                                 <td class="inner contents">
@@ -38,6 +38,63 @@
                                 </td>
                             </tr>
                         </table>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="two-column">
+                        <!--[if (gte mso 9)|(IE)]>
+                        <table width="100%">
+                        <tr>
+                        <td width="50%" valign="top">
+                        <![endif]-->
+                        <div class="column">
+                            <table width="100%">
+                                <tr>
+                                    <td class="inner">
+                                        <table class="contents">
+                                            <tr>
+                                                <td>
+                                                    <img src="images/two-column-01.jpg" width="280" alt="" />
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="text">
+                                                        Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--[if (gte mso 9)|(IE)]>
+                        </td><td width="50%" valign="top">
+                        <![endif]-->
+                        <div class="column">
+                            <table width="100%">
+                                <tr>
+                                    <td class="inner">
+                                        <table class="contents">
+                                            <tr>
+                                                <td>
+                                                    <img src="images/two-column-01.jpg" width="280" alt="" />
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="text">
+                                                        Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--[if (gte mso 9)|(IE)]>
+                        </td>
+                        </tr>
+                        </table>
+                        <![endif]-->
                     </td>
                 </tr>
             </table>
