--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                         <table class="contents">
                                             <tr>
                                                 <td>
-                                                    <img src="images/two-column-01.jpg" width="280" alt="" />
+                                                    <img src="images/two-column-02.jpg" width="280" alt="" />
                                                 </td>
                                             </tr>
                                             <tr>
@@ -86,6 +86,181 @@
                                                 </td>
                                             </tr>
                                         </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--[if (gte mso 9)|(IE)]>
+                        </td>
+                        </tr>
+                        </table>
+                        <![endif]-->
+                    </td>
+                </tr>
+                <tr>
+                    <td class="three-column">
+                        <!--[if (gte mso 9)|(IE)]>
+                        <table width="100%">
+                        <tr>
+                        <td width="200" valign="top">
+                        <![endif]-->
+                        <div class="column">
+                            <table width="100%">
+                                <tr>
+                                    <td class="inner">
+                                        <table class="contents">
+                                            <tr>
+                                                <td>
+                                                    <img src="images/three-column-01.jpg" width="180" alt="" />
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="text">
+                                                    Scelerisque congue eros eu posuere. Praesent in felis ut velit pretium lobortis rhoncus ut erat.
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>                        <!--[if (gte mso 9)|(IE)]>
+                        </td><td width="200" valign="top">
+                        <![endif]-->
+                        <div class="column">
+                            <table width="100%">
+                                <tr>
+                                    <td class="inner">
+                                        <table class="contents">
+                                            <tr>
+                                                <td>
+                                                    <img src="images/three-column-02.jpg" width="180" alt="" />
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="text">
+                                                    Scelerisque congue eros eu posuere. Praesent in felis ut velit pretium lobortis rhoncus ut erat.
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>                        <!--[if (gte mso 9)|(IE)]>
+                        </td><td width="200" valign="top">
+                        <![endif]-->
+                        <div class="column">
+                            <table width="100%">
+                                <tr>
+                                    <td class="inner">
+                                        <table class="contents">
+                                            <tr>
+                                                <td>
+                                                    <img src="images/three-column-03.jpg" width="180" alt="" />
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="text">
+                                                    Scelerisque congue eros eu posuere. Praesent in felis ut velit pretium lobortis rhoncus ut erat.
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>                        <!--[if (gte mso 9)|(IE)]>
+                        </td>
+                        </tr>
+                        </table>
+                        <![endif]-->
+                    </td>
+                </tr>
+                <tr>
+                    <td class="three-column">
+                        <!--[if (gte mso 9)|(IE)]>
+                        <table width="100%">
+                        <tr>
+                        <td width="200" valign="top">
+                        <![endif]-->
+                        <div class="column">
+                            <table width="100%">
+                                <tr>
+                                    <td class="inner contents">
+                                        <p class="h2">Heading</p>
+                                        <p>Class eleifend aptent taciti sociosqu ad litora torquent conubia</p>
+                                        <p><a href="#">Read more</a></p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--[if (gte mso 9)|(IE)]>
+                        </td><td width="200" valign="top">
+                        <![endif]-->
+                        <div class="column">
+                            <table width="100%">
+                                <tr>
+                                    <td class="inner contents">
+                                        <p class="h2">Heading</p>
+                                        <p>Class eleifend aptent taciti sociosqu ad litora torquent conubia</p>
+                                        <p><a href="#">Read more</a></p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--[if (gte mso 9)|(IE)]>
+                        </td><td width="200" valign="top">
+                        <![endif]-->
+                        <div class="column">
+                            <table width="100%">
+                                <tr>
+                                    <td class="inner contents">
+                                        <p class="h2">Heading</p>
+                                        <p>Class eleifend aptent taciti sociosqu ad litora torquent conubia</p>
+                                        <p><a href="#">Read more</a></p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--[if (gte mso 9)|(IE)]>
+                        </td>
+                        </tr>
+                        <tr>
+                        <td width="200" valign="top">
+                        <![endif]-->
+                        <div class="column">
+                            <table width="100%">
+                                <tr>
+                                    <td class="inner contents">
+                                        <p class="h2">Heading</p>
+                                        <p>Class eleifend aptent taciti sociosqu ad litora torquent conubia</p>
+                                        <p><a href="#">Read more</a></p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--[if (gte mso 9)|(IE)]>
+                        </td><td width="200" valign="top">
+                        <![endif]-->
+                        <div class="column">
+                            <table width="100%">
+                                <tr>
+                                    <td class="inner contents">
+                                        <p class="h2">Heading</p>
+                                        <p>Class eleifend aptent taciti sociosqu ad litora torquent conubia</p>
+                                        <p><a href="#">Read more</a></p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--[if (gte mso 9)|(IE)]>
+                        </td><td width="200" valign="top">
+                        <![endif]-->
+                        <div class="column">
+                            <table width="100%">
+                                <tr>
+                                    <td class="inner contents">
+                                        <p class="h2">Heading</p>
+                                        <p>Class eleifend aptent taciti sociosqu ad litora torquent conubia</p>
+                                        <p><a href="#">Read more</a></p>
                                     </td>
                                 </tr>
                             </table>
