7. Adding a Three-column Layout

--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
                             <table width="100%">
                                 <tr>
                                     <td class="inner contents">
-                                        <p class="h2">Heading</p>
+                                        <p class="h2">Fashion</p>
                                         <p>Class eleifend aptent taciti sociosqu ad litora torquent conubia</p>
-                                        <p><a href="#">Read more</a></p>
+                                        <p><a href="#">Read requirements</a></p>
                                     </td>
                                 </tr>
                             </table>
@@ -199,9 +199,9 @@
                             <table width="100%">
                                 <tr>
                                     <td class="inner contents">
-                                        <p class="h2">Heading</p>
-                                        <p>Class eleifend aptent taciti sociosqu ad litora torquent conubia</p>
-                                        <p><a href="#">Read more</a></p>
+                                        <p class="h2">Photography</p>
+                                        <p>Maecenas sed ante pellentesque, posuere leo id, eleifend dolor</p>
+                                        <p><a href="#">See examples</a></p>
                                     </td>
                                 </tr>
                             </table>
@@ -213,9 +213,9 @@
                             <table width="100%">
                                 <tr>
                                     <td class="inner contents">
-                                        <p class="h2">Heading</p>
-                                        <p>Class eleifend aptent taciti sociosqu ad litora torquent conubia</p>
-                                        <p><a href="#">Read more</a></p>
+                                        <p class="h2">Design</p>
+                                        <p>Class aptent taciti sociosqu eleifend ad litora per conubia nostra</p>
+                                        <p><a href="#">See the winners</a></p>
                                     </td>
                                 </tr>
                             </table>
@@ -230,9 +230,9 @@
                             <table width="100%">
                                 <tr>
                                     <td class="inner contents">
-                                        <p class="h2">Heading</p>
+                                        <p class="h2">Cooking</p>
                                         <p>Class eleifend aptent taciti sociosqu ad litora torquent conubia</p>
-                                        <p><a href="#">Read more</a></p>
+                                        <p><a href="#">Read recipes</a></p>
                                     </td>
                                 </tr>
                             </table>
@@ -244,9 +244,9 @@
                             <table width="100%">
                                 <tr>
                                     <td class="inner contents">
-                                        <p class="h2">Heading</p>
-                                        <p>Class eleifend aptent taciti sociosqu ad litora torquent conubia</p>
-                                        <p><a href="#">Read more</a></p>
+                                        <p class="h2">Woodworking</p>
+                                        <p>Maecenas sed ante pellentesque, posuere leo id, eleifend dolor</p>
+                                        <p><a href="#">See examples</a></p>
                                     </td>
                                 </tr>
                             </table>
@@ -258,9 +258,9 @@
                             <table width="100%">
                                 <tr>
                                     <td class="inner contents">
-                                        <p class="h2">Heading</p>
-                                        <p>Class eleifend aptent taciti sociosqu ad litora torquent conubia</p>
-                                        <p><a href="#">Read more</a></p>
+                                        <p class="h2">Craft</p>
+                                        <p>Class aptent taciti sociosqu ad eleifend litora per conubia nostra</p>
+                                        <p><a href="#">Vote now</a></p>
                                     </td>
                                 </tr>
                             </table>
