--- a/index.html
+++ b/index.html
@@ -272,6 +272,41 @@
                         <![endif]-->
                     </td>
                 </tr>
+                <tr>
+                    <td class="left-sidebar">
+                        <!--[if (gte mso 9)|(IE)]>
+                        <table width="100%">
+                        <tr>
+                        <td width="100">
+                        <![endif]-->
+                        <div class="column left">
+                            <table width="100%">
+                                <tr>
+                                    <td class="inner">
+                                        <img src="images/sidebar-01.jpg" width="80" alt="" />
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--[if (gte mso 9)|(IE)]>
+                        </td><td width="500">
+                        <![endif]-->
+                        <div class="column right">
+                            <table width="100%">
+                                <tr>
+                                    <td class="inner contents">
+                                        Praesent laoreet malesuada cursus. Maecenas scelerisque congue eros eu posuere. Praesent in felis ut velit pretium lobortis rhoncus ut erat. <a href="#">Read&nbsp;on</a>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--[if (gte mso 9)|(IE)]>
+                        </td>
+                        </tr>
+                        </table>
+                        <![endif]-->
+                    </td>
+                </tr>
             </table>
             <!--[if (gte mso 9)|(IE)]>
             </td>
